# full-stack-react-fastapi

./: .gitignore  README.md  docker-compose.yml
back/: main.py  pyproject.toml  requirements.txt  test.py
back/config/: __init__.py  config.py  log_config.py
back/model/: __init__.py  db_conn.py  model.py  table_init.py
back/views/: __init__.py  api.py  user.py
front/: index.html  package.json  tsconfig.app.json  vite.config.ts
front/src/: App.tsx  index.css  main.tsx
front/src/components/: Navbar.tsx
front/src/utils/: api.tsx  router.tsx  settings.tsx  themeconfig.tsx
nginx/conf/conf.d/: default.conf
nginx/html/: index.html
nginx/html/assets/: index-NvJ9jQ-g.js  index-W6c2LgEg.css
